--- a/assets/src/sass/components/_main.scss
+++ b/assets/src/sass/components/_main.scss
@@ -1,6 +1,3 @@
 body {
-  font-family: "gotham", sans-serif !important;
-  ::placeholder {
-    color: #808080;
-  }
+  font-family: "Noto Sans", sans-serif;
 }
