--- a/assets/src/sass/frontend.scss
+++ b/assets/src/sass/frontend.scss
@@ -16,6 +16,7 @@
 @use 'components/blog-card';
 @use 'components/pagination';
 @use 'components/wordpress';
+@use 'components/forms';
 
 // This section adds tailwind, but @tailwind isn't recognized so we have to suppress stylelint.
 /* stylelint-disable */
