:rocket: Until I find a bug, the header section on frontpage appears to work on both mobile and desktop.

--- a/assets/src/sass/components/_background.scss
+++ b/assets/src/sass/components/_background.scss
@@ -80,3 +80,14 @@
     width: 100%;
   }
 }
+
+//content middle ONLY on tablet and higher
+@media screen and (max-width: 1280px) {
+  .content-middle-small-only {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+  }
+}
