--- a/assets/src/sass/components/_main.scss
+++ b/assets/src/sass/components/_main.scss
@@ -1,3 +1,12 @@
 body {
   font-family: "Noto Sans", sans-serif;
 }
+.background-size {
+  height: 80vh;
+}
+
+@media screen and (min-width: 1280px) {
+  .background-size {
+    height: auto;
+  }
+}
